css changes, create project card borders and fixing line spacing

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -2,6 +2,7 @@ body {
   margin:0;
   justify-content: center;
   text-align: center;
+  background-color: #111111;
 }
 
 .App-header {
@@ -22,6 +23,20 @@ body {
 .projects {
   list-style-type: none;
   justify-content: center;
+  margin: 5px;
+}
+
+.project {
+  list-style-type: none;
+  justify-content: center;
+  border: #ddd;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 1%;
+}
+
+.projects div{
+  border: #ddd;
 }
 
 @keyframes App-logo-spin {
@@ -67,6 +82,10 @@ body {
   margin: 0 auto;
   display: grid;
   gap: 1rem;
+}
+
+.card p {
+  color: #ddd;
 }
 
 @media (min-width: 600px) {
